tests/ui/const-generics/mgca/tuple_expr_type_mismatch.stderr
error: type annotations needed for the literal
  --> $DIR/tuple_expr_type_mismatch.rs:13:14
   |
LL |     foo::<{ (1, true) }>();
   |              ^

error: mismatched types: expected `i32`, found `bool`
  --> $DIR/tuple_expr_type_mismatch.rs:13:17
   |
LL |     foo::<{ (1, true) }>();
   |                 ^^^^

error: mismatched types: expected `[u8; 2]`, found `u32`
  --> $DIR/tuple_expr_type_mismatch.rs:16:14
   |
LL |     bar::<{ (1_u32, [1, 2]) }>();
   |              ^^^^^

error: expected `i32`, found const array
  --> $DIR/tuple_expr_type_mismatch.rs:16:21
   |
LL |     bar::<{ (1_u32, [1, 2]) }>();
   |                     ^^^^^^

error: mismatched types: expected `char`, found `i32`
  --> $DIR/tuple_expr_type_mismatch.rs:19:14
   |
LL |     qux::<{ (1i32, 'a') }>();
   |              ^^^^

error: mismatched types: expected `i32`, found `char`
  --> $DIR/tuple_expr_type_mismatch.rs:19:20
   |
LL |     qux::<{ (1i32, 'a') }>();
   |                    ^^^

error: aborting due to 6 previous errors

